--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "google-genai>=1.20.0",
+    "google-generativeai>=0.8.5",
+    "langchain>=0.3.25",
+    "langchain-google-genai>=2.0.10",
+    "langchain-mcp-adapters>=0.1.7",
+    "langgraph>=0.4.8",
     "mcp>=1.9.4",
     "python-dotenv>=1.1.0",
 ]
